--- a/main.html
+++ b/main.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shopping cart</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="inputs" style="display: flex; gap: 10px;">
+        <form id="myinputs">
+            <input type="text" id="item-name-input" placeholder="Name">
+            <input type="text" id="item-qty-input" placeholder="Qty">
+            <input type="text" id="item-price-input" placeholder="Price">
+        </form>
+        <button id="add" onclick="addData();">Add</button>
+    </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
+            </tr>
+        </thead>
+        <tbody>
+    
+        </tbody>
+    </table>
+    <div><h3 id="total">Grand Total: <span id="grand_total">0</span>  $</h3></div>
+        <!-- the entire body must be written by student -->
+        <script type="text/javascript" src="./script.js">
+    </script>
+    
 </body>
-
 </html>
